--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,31 @@
 /*  your css code here. If applicable */
- table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        table, th, td {
-            border: 1px solid black;
-        }
-        th, td {
-            padding: 1px;
-            text-align: left;
-        }
-        .center {
-            text-align: center;
-        }
-        .right {
-            text-align: right;
-        }
-        .green {
-            background-color: green;
-        }
-        .blue {
-            background-color: blue;
-        }
-        .middle {
-            margin: 0 auto;
-        }
-        h1 {
-            text-align: center;
-        }
+ .middle{
+    margin: auto;
+    width: 60%;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    text-align: right;
+}
+
+table{
+    border: 1px solid black;
+    border-spacing: 1px;
+}
+
+td{
+    padding: 1px;
+    border: 1px solid black;
+}
+
+.green{
+    background-color: green;
+}
+
+.blue{
+    background-color: blue;
+}
